<resources>
    <string name="app_name">Ecommerce Training</string>
    <string name="search">Search</string>
    <string name="shipping_address">Bipin Jikadara \n 113, Bhaktinagar Society, Singanpor Road \n Katargam, Surat</string>
    <string name="order_details"> <li>Fridge</li>\n<li>TV</li> \n <li>Washing Machine</li></string>
    <string name="credit_card">Credit Card: <small>Visa, Master, Amex, Diners, RuPay &amp; more</small></string>
    <string name="debit_card">Debit Card: <small>Visa, Master, Amex, Diners, RuPay &amp; more</small></string>
    <string name="net_banking">Net Banking: <small>Over 55+ Banks</small></string>
    <string name="bnpl">Buy Now Pay Later</string>
    <string name="UPI">UPI: <small>GooglePay, PhonePe, PayTM, JioPay, AmazonPay &amp; more</small></string>
    <string name="payment_description">Clicking on <b>Pay</b> will take you to a secure payment gateway where you can make your payment. \n \n Your order will not be completed without this action</string>
    <string name="payment_consent"> I agree to the <a href="https://www.reliancedigital.in/content/terms-of-use" target="_blank">Terms &amp; Conditions</a></string>
    <string name="delivery">  Expected Delivery: 20 Jan 2023</string>
    <string name="item_desc"><b>Product Specifications</b>
        \n <li>Star Wars Rebel Alliance Special Forces Rucksack</li>
        \n <li>Officially-licensed Star Wars merchandise</li>
        \n <li>Adjustable shoulder straps</li>
        \n <li>Materials: Polyester, faux leather (vegan), and silicone strap closure</li>
        \n <li>Dimensions: 18″ tall x 12″ wide x 5″ deep</li>
        \n <li>Care Instructions: Wipe clean with a damp cloth</li>
        \n <li>Weight: 2 lb.</li>
    </string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="express_delivery">EXPRESS Delivery <small>(within 3 hours)</small></string>
    <string name="pick_at_store">Pick at Store: <small>At your convenience | Search Nearby Store</small></string>
    <string name="standard_delivery">Standard Delivery: <small>6 - 8 working days</small></string>
    <string name="use_test_credentials">Use test credentials</string>
</resources>