<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShippingAddress">


    <TextView android:id="@+id/tvCustomerDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:text="Customer Details"
        android:textSize="18sp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCustomerDetails"
        android:maxLength="20"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="05dp"
        android:layout_marginBottom="05dp"
        android:hint="First name + Last name"/>

    <EditText
        android:id="@+id/inputAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputName"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="05dp"
        android:layout_marginBottom="05dp"
        android:hint="Enter your address" />

    <EditText
        android:id="@+id/inputCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputAddress"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="05dp"
        android:layout_marginBottom="05dp"
        android:hint="Enter your city"/>

    <EditText
        android:id="@+id/inputState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputCity"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="05dp"
        android:layout_marginBottom="05dp"
        android:hint="Enter your state"/>

    <EditText
        android:id="@+id/inputZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputState"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="05dp"
        android:layout_marginBottom="05dp"
        android:hint="Enter your zip"
        android:inputType="number"
        android:maxLength="6"/>

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delivery Type:"
        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputZip"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="05dp"
        android:layout_marginBottom="05dp"/>

    <RadioGroup
        android:id="@+id/radioGroupDelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="05dp"
        android:layout_marginBottom="05dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt">

        <RadioButton
            android:id="@+id/rb_express_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/express_delivery"/>
        <RadioButton
            android:id="@+id/rb_pick_at_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_at_store"/>
        <RadioButton
            android:id="@+id/rb_standard_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/standard_delivery"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonPlaceYourOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bkg_shape"
        android:gravity="center"
        android:textColor="#FFFF"
        android:text="Place your order"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>